// Request Service ERD
// Service: request-service (gộp intake + catalog)
// Database: request_db
// Người 2

// API Examples:
// POST /requests
//   - Body: { "request_type": "transcription", "description": "Transcribe this song", "user_id": "uuid" }
//   - Response: { "request_id": "uuid", "status": "pending" }
//
// GET /requests/{id}
//   - Response: { "request_id": "uuid", "title": "Song transcription", "status": "pending" }
//
// GET /requests/{id}/booking-selections
//   - Response: { "artists": [...], "equipment": [...], "instruments": [...] }
//
// GET /catalog/equipment
//   - Response: [{ "equipment_id": "uuid", "equipment_name": "Yamaha C3 Piano", "rental_fee": 50000 }]
//
// GET /catalog/notation-instruments
//   - Response: [{ "instrument_id": "uuid", "instrument_name": "Piano", "usage": "both" }]
//
// Events: request.created, request.updated, selection.changed

// Intake tables
Table service_requests {
  request_id uuid [pk, default: `gen_random_uuid()`]
  user_id uuid [not null, note: 'Soft reference to identity-service']
  manager_user_id uuid [note: 'Soft reference to identity-service']
  request_type service_type [not null]
  
  // Thông tin cá nhân
  contact_name varchar(100)
  contact_phone varchar(20)
  contact_email varchar(100)
  
  genres text[] [note: 'Array of genres (VD: ["Pop", "Rock"]) cho arrangement']
  purpose varchar(100) [note: 'Mục đích (VD: "karaoke_cover", "performance") cho arrangement']
  tempo_percentage decimal(5,2) [note: 'VD: 80.00, 50.00 (tốc độ phát cho transcription)']
  duration_minutes decimal(10,2) [note: 'Độ dài audio file (phút) - dùng để tính giá transcription']
  has_vocalist boolean [default: false, note: 'Customer có chọn ca sĩ cho arrangement_with_recording']
  preferred_specialists jsonb [note: 'Array of PreferredSpecialistInfo - danh sách specialist info mà customer chọn']
  external_guest_count integer [default: 0, note: 'Số người customer mang theo cho studio booking']
  title varchar(200)
  description text [not null]
  status request_status [default: 'pending', not null]
  
  // Pricing
  service_price decimal(12,2) [note: 'Giá dịch vụ cơ bản (không bao gồm instrument costs)']
  instrument_price decimal(12,2) [note: 'Tổng giá instruments']
  total_price decimal(12,2) [note: 'Tổng giá cuối cùng (servicePrice + instrumentPrice)']
  currency currency_type [note: 'Loại tiền tệ của totalPrice']
  
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  created_by varchar(255)
  updated_by varchar(255)
  
  Note: 'Yêu cầu dịch vụ từ khách hàng. Extends BaseEntity. tempo_percentage dùng cho transcription (80% = chậm 20%, 50% = chậm 50%). duration_minutes: độ dài audio file (phút) - dùng để tính giá transcription. has_vocalist: true nếu customer chọn ca sĩ. external_guest_count: số người customer mang theo cho studio booking. contact_*: thông tin cá nhân linh hoạt.'
  
  indexes {
    user_id
    manager_user_id
    status
    request_type
  }
}

Table request_notation_instruments {
  request_instrument_id uuid [pk, default: `gen_random_uuid()`]
  request_id uuid [ref: > service_requests.request_id, not null]
  instrument_id uuid [ref: > notation_instruments.instrument_id, not null]
  is_main boolean [default: false, note: 'true nếu đây là main instrument (cho arrangement)']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  created_by varchar(255)
  updated_by varchar(255)

  Note: 'Danh sách nhạc cụ ảo được chọn cho từng request. Dùng chủ yếu cho Arrangement (đa chọn). Many-to-Many: ServiceRequest ↔ NotationInstrument.'
  
  indexes {
    request_id
    instrument_id
    (request_id, instrument_id) [unique]
  }
}

// Catalog tables
Table notation_instruments {
  instrument_id uuid [pk, default: `gen_random_uuid()`]
  instrument_name varchar(100) [not null]
  usage notation_instrument_usage [not null, default: 'both']
  base_price bigint [default: 0, note: 'Giá cơ bản cho mỗi nhạc cụ (VND)']
  is_active boolean [default: true]
  image varchar(500) [note: 'Public S3 URL']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  created_by varchar(255)
  updated_by varchar(255)

  Note: 'Danh mục nhạc cụ ảo dùng trong ký âm/notation trên máy (không phải thiết bị thật). Extends BaseEntity.'

  indexes {
    instrument_name
    is_active
  }
}

Table pricing_matrix {
  pricing_id uuid [pk, default: `gen_random_uuid()`]
  service_type service_type [not null]
  unit_type unit_type [not null]
  base_price decimal(12,2) [not null]
  currency currency_type [default: 'VND']
  description text
  is_active boolean [default: true]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  created_by varchar(255)
  updated_by varchar(255)
  
  Note: 'Bảng giá chuẩn theo service type và unit type. Extends BaseEntity.'
  
  indexes {
    service_type
    currency
    is_active
  }
}

Table outbox_events {
  event_id uuid [pk, default: `gen_random_uuid()`]
  aggregate_id uuid [not null]
  aggregate_type text [not null]
  event_type text [not null]
  event_payload jsonb [not null]
  occurred_at timestamptz [not null, default: `now()`]
  published_at timestamptz
  retry_count integer [not null, default: 0]
  last_error text
  next_retry_at timestamptz
  trace_id text
  correlation_id text
  
  Note: 'Event publishing'
  
  indexes {
    aggregate_id
    aggregate_type
    event_type
    occurred_at
    (next_retry_at)
  }
}

Table consumed_events {
  event_id uuid [not null]
  consumer_name text [not null]
  processed_at timestamptz [not null, default: `now()`]
  
  Note: 'Idempotency - PK(event_id, consumer_name), INSERT ... ON CONFLICT DO NOTHING'
  
  indexes {
    (event_id, consumer_name) [unique, pk]
    consumer_name
    processed_at
  }
}

// Enums
Enum service_type {
  transcription
  arrangement
  arrangement_with_recording
  recording
}

Enum request_status {
  pending
  contract_sent
  contract_signed
  approved
  in_progress
  completed
  cancelled
  rejected
}

Enum recording_role {
  vocalist
  instrumentalist
  both
}

Enum notation_instrument_usage {
  transcription
  arrangement
  both
}

Enum unit_type {
  per_minute
  per_song
  per_hour
  fixed_price
}

Enum currency_type {
  VND
  USD
  EUR
}
